test/fail_compilation/json3.d
/*
REQUIRED_ARGS: -Xqfoo
TEST_OUTPUT:
---
Error: unrecognized switch '-Xqfoo'
       run 'dmd -man' to open browser on manual
---
*/
